endpoint to delete annotation
