# src/server/api/controllers/annotations.controller.js
@@ -53,8 +53,15 @@ const getAnnotationsById = async (id) => {
   }
 };
 
+const deleteAnnotations = async (annotation_id)=> {
+return knex('annotations')
+.where({annotation_id:annotation_id})
+.del();
+};
+
 module.exports = {
   createAnnotation,
   getAnnotations,
   getAnnotationsById,
+  deleteAnnotations,
 };
